--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,13 @@
 		<meta http-equiv="author" content="Tim Visher" />
 		<meta http-equiv="date" content="02/09/07" />
 		<title>TwoNegatives Makes It Positive.</title>
-		<style type="text/css">
-			body {
-			    background: #000 center;
-			    background-image: url(TwoNegativesLogo.png);
-			    background-repeat: no-repeat;
-                background-attachment: fixed;
-			}
-		</style>
+		<link rel="stylesheet" href="/style.css" />
 	</head>
 	
-	<body></body>
+	<body>
+    <ul class="nav-bar">
+      <li><a class="item" href="//blog.twonegatives.com">Blog</a></li>
+    </ul>
+  </body>
 	
 </html>
