--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="date" content="02/09/07" />
     <title>TwoNegatives Makes It Positive.</title>
     <link rel="stylesheet" href="/style.css" />
+    <link rel="shortcut icon" href="favicon.ico?v=1" />
   </head>
 
   <body></body>
